--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,23 @@
 Package: SmashingPumpkins
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Color Palettes from the Smashing Pumpkins Album Covers for Data Visualization
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: c(person("Philip", "Warncke", email = "pwarncke@live.unc.edu", role = c("cre", "aut")))
+Maintainer: Philip Warncke <pwarncke@live.unc.edu>
+Description: This package was inspired and is modeled after karthik/wesanderson (https://github.com/karthik/wesanderson). It generates the most prominent color schemes used in the album covers of the US alternative rockband, 'The Smashing Pumpkins'.
+URL: https://github.com/pwarncke77/SmashingPumpkins
+BugReports: https://github.com/pwarncke77/SmashingPumpkins/issues
+License: GPL-3
+Depends:
+    R (>= 3.6.0)
+Imports:
+    ggplot2,
+    graphics,
+    grDevices (>= 3.6.2)
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.3
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
