--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 export(print_palette)
 export(pumpkins_palette)
-export(pumpkins_pallettes)
+export(pumpkins_palettes)
 importFrom(grDevices,rgb)
 importFrom(graphics,image)
 importFrom(graphics,par)
